--- a/source/_data/contentful/leadingPage.yaml
+++ b/source/_data/contentful/leadingPage.yaml
@@ -5,6 +5,7 @@ leadingPage:
     created_at: !ruby/object:DateTime 2018-06-25 15:16:05.213000000 Z
     updated_at: !ruby/object:DateTime 2018-07-08 17:55:41.606000000 Z
     content_type_id: leadingPage
+    revision: 5
   title: Leading Examples Page
   description: 'Results for America classified state governments’ data-driven and
     evidence-based practices, policies, programs, and systems as “leading” examples
@@ -19,6 +20,7 @@ leadingPage:
       created_at: !ruby/object:DateTime 2018-06-20 19:03:08.652000000 Z
       updated_at: !ruby/object:DateTime 2018-06-26 21:57:49.126000000 Z
       content_type_id: leading
+      revision: 4
     state: Colorado
     state_abbreviation: CO
     type: Statewide
@@ -43,6 +45,7 @@ leadingPage:
       created_at: !ruby/object:DateTime 2018-06-22 15:55:10.657000000 Z
       updated_at: !ruby/object:DateTime 2018-06-22 15:55:10.657000000 Z
       content_type_id: leading
+      revision: 1
     state: Tennessee
     state_abbreviation: TN
     type: Statewide
@@ -75,6 +78,7 @@ leadingPage:
       created_at: !ruby/object:DateTime 2018-06-25 04:09:55.477000000 Z
       updated_at: !ruby/object:DateTime 2018-06-29 20:06:27.862000000 Z
       content_type_id: leading
+      revision: 3
     state: Indiana
     state_abbreviation: IN
     type: Statewide
@@ -108,6 +112,7 @@ leadingPage:
       created_at: !ruby/object:DateTime 2018-06-25 04:14:47.968000000 Z
       updated_at: !ruby/object:DateTime 2018-07-06 00:08:54.281000000 Z
       content_type_id: leading
+      revision: 4
     state: Washington
     state_abbreviation: WA
     type: Multiple agencies
@@ -136,6 +141,7 @@ leadingPage:
       created_at: !ruby/object:DateTime 2018-06-25 04:21:16.267000000 Z
       updated_at: !ruby/object:DateTime 2018-06-29 20:10:54.669000000 Z
       content_type_id: leading
+      revision: 3
     state: Kentucky
     state_abbreviation: KY
     type: Multiple agencies
@@ -174,6 +180,7 @@ leadingPage:
       created_at: !ruby/object:DateTime 2018-06-25 04:29:26.330000000 Z
       updated_at: !ruby/object:DateTime 2018-06-29 20:12:18.657000000 Z
       content_type_id: leading
+      revision: 3
     state: Colorado
     state_abbreviation: CO
     type: Statewide
@@ -205,6 +212,7 @@ leadingPage:
       created_at: !ruby/object:DateTime 2018-06-25 04:32:13.605000000 Z
       updated_at: !ruby/object:DateTime 2018-07-06 00:00:33.351000000 Z
       content_type_id: leading
+      revision: 4
     state: Massachusetts
     state_abbreviation: MA
     type: Single agency
@@ -230,6 +238,7 @@ leadingPage:
       created_at: !ruby/object:DateTime 2018-06-26 22:02:13.609000000 Z
       updated_at: !ruby/object:DateTime 2018-07-06 00:25:12.884000000 Z
       content_type_id: leading
+      revision: 3
     state: None
     state_abbreviation: "--"
     short_description: Results for America was not able to identify any states with
@@ -243,6 +252,7 @@ leadingPage:
       created_at: !ruby/object:DateTime 2018-06-25 04:37:39.405000000 Z
       updated_at: !ruby/object:DateTime 2018-06-29 20:15:25.120000000 Z
       content_type_id: leading
+      revision: 3
     state: New Mexico
     state_abbreviation: NM
     type: Statewide
@@ -272,6 +282,7 @@ leadingPage:
       created_at: !ruby/object:DateTime 2018-06-25 04:44:42.643000000 Z
       updated_at: !ruby/object:DateTime 2018-06-29 20:17:49.704000000 Z
       content_type_id: leading
+      revision: 3
     state: Minnesota
     state_abbreviation: MN
     type: Multiple agencies
@@ -307,6 +318,7 @@ leadingPage:
       created_at: !ruby/object:DateTime 2018-06-25 14:34:39.554000000 Z
       updated_at: !ruby/object:DateTime 2018-07-02 16:57:22.766000000 Z
       content_type_id: leading
+      revision: 4
     state: Washington
     state_abbreviation: WA
     type: Multiple agencies
@@ -341,6 +353,7 @@ leadingPage:
       created_at: !ruby/object:DateTime 2018-06-25 14:45:46.494000000 Z
       updated_at: !ruby/object:DateTime 2018-06-29 20:19:31.810000000 Z
       content_type_id: leading
+      revision: 3
     state: Oregon
     state_abbreviation: OR
     type: Multiple agencies
@@ -373,6 +386,7 @@ leadingPage:
       created_at: !ruby/object:DateTime 2018-06-25 14:52:12.465000000 Z
       updated_at: !ruby/object:DateTime 2018-06-29 20:21:26.545000000 Z
       content_type_id: leading
+      revision: 3
     state: California
     state_abbreviation: CA
     type: Multiple agencies
@@ -417,6 +431,7 @@ leadingPage:
       created_at: !ruby/object:DateTime 2018-06-25 14:58:30.313000000 Z
       updated_at: !ruby/object:DateTime 2018-06-29 20:21:59.316000000 Z
       content_type_id: leading
+      revision: 3
     state: Rhode Island
     state_abbreviation: RI
     type: Single agency
@@ -454,6 +469,7 @@ leadingPage:
       created_at: !ruby/object:DateTime 2018-06-25 15:05:06.943000000 Z
       updated_at: !ruby/object:DateTime 2018-06-29 20:24:08.575000000 Z
       content_type_id: leading
+      revision: 3
     state: Minnesota
     state_abbreviation: MN
     type: Multiple agencies
