--- a/_config.yml
+++ b/_config.yml
@@ -17,16 +17,19 @@ title:
 email:
 description: > # this means to ignore newlines until "baseurl:"
 
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://2018state.results4america.org" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/rfa-2019" # the subpath of your site, e.g. /blog
+url: "https://objectively.github.io"
+# baseurl: "" # the subpath of your site, e.g. /blog
+# url: "https://2018state.results4america.org" # the base hostname & protocol for your site, e.g. http://example.com
 project_url: "/state-standard-of-excellence/"
 twitter_username: results4america
 github_username:
 seo_image_path: '/images/rfa-og.jpg'
+content_year: 2019
 
 # Build settings
 markdown: kramdown
-gems:
+plugins:
   - jekyll-feed
 
 exclude:
