--- a/_config.yml
+++ b/_config.yml
@@ -18,18 +18,18 @@ email:
 description: > # this means to ignore newlines until "baseurl:"
 
 # deploy urls
-# baseurl: "" # the subpath of your site, e.g. /blog
-# url: "https://2019state.results4america.org"
-# # baseurl: "" # the subpath of your site, e.g. /blog
-# # url: "https://2018state.results4america.org" # the base hostname & protocol for your site, e.g. http://example.com
-# project_url: "/state-standard-of-excellence/"
-
-# dev urls
-baseurl: "/rfa-2019" # the subpath of your site, e.g. /blog
-url: "https://objectively.github.io"
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://2019state.results4america.org"
 # baseurl: "" # the subpath of your site, e.g. /blog
 # url: "https://2018state.results4america.org" # the base hostname & protocol for your site, e.g. http://example.com
-project_url: "/rfa-2019/"
+project_url: "/state-standard-of-excellence/"
+
+# dev urls
+# baseurl: "/rfa-2019" # the subpath of your site, e.g. /blog
+# url: "https://objectively.github.io"
+# # baseurl: "" # the subpath of your site, e.g. /blog
+# # url: "https://2018state.results4america.org" # the base hostname & protocol for your site, e.g. http://example.com
+# project_url: "/rfa-2019/"
 twitter_username: results4america
 github_username:
 seo_image_path: '/images/rfa-og.jpg'
